2011-05-09  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.md (TD/TF mem to reg move splitter): Make the
	temporary register to match Pmode.

2011-05-09  Eric Botcazou  <ebotcazou@adacore.com>

	* var-tracking.c (find_mem_expr_in_1pdv): Fix thinko.
	(dataflow_set_preserve_mem_locs): Likewise.

2011-05-06  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*movdf_internal_nointeger): Apply "*"
	constraint modifier to "r".

2011-05-06  Alan Modra  <amodra@gmail.com>

	PR target/48900
	* config/rs6000/rs6000.c (rs6000_legitimize_tls_address): Use
	const0_rtx as the arg to the dummy __tls_get_addr libcall.

2011-05-06  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.c (s390_asm_trampoline_template): Comment
	instruction sizes.
	(s390_trampoline_init): Replace UNITS_PER_WORD with UNITS_PER_LONG.

2011-05-06  Ramana Radhakrishnan  <ramana.radhakrishnan@linaro.org>

	PR target/48252
	* config/arm/neon.md (neon_vtrn<mode>): Fix typo from earlier commit.

2011-05-05  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* config/rs6000/rs6000.c (rs6000_handle_option): Add missing break
	for OPT_mfpu_ case.

2011-05-05  Jason Merrill  <jason@redhat.com>

	PR c++/40975
	* tree-inline.c (copy_tree_r): Handle STATEMENT_LIST.

2011-05-05  Julian Brown  <julian@codesourcery.com>

	* config/arm/neon.md (vec_set<mode>_internal): Fix misplaced
	parenthesis in D-register case.

2011-05-05  Ira Rosen  <ira.rosen@linaro.org>

	Backport from mainline:
	2011-04-18  Ulrich Weigand  <ulrich.weigand@linaro.org>
		    Ira Rosen  <ira.rosen@linaro.org>

	PR target/48252
	* config/arm/arm.c (neon_emit_pair_result_insn): Swap arguments
	to match neon_vzip/vuzp/vtrn_internal.
	* config/arm/neon.md (neon_vtrn<mode>_internal): Make both
	outputs explicitly dependent on both inputs.
	(neon_vzip<mode>_internal, neon_vuzp<mode>_internal): Likewise.

2011-05-04  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (*movdi_internal_rex64) <TYPE_SSEMOV>: