@@ -1,3 +1,10 @@
+2011-05-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/48611
+	PR tree-optimization/48794
+	* gfortran.dg/gomp/pr48611.f90: New test.
+	* gfortran.dg/gomp/pr48794.f90: New test.
+
 2011-05-09  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/48522
